--- a/medapp/templates/modify_appointment.html
+++ b/medapp/templates/modify_appointment.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block title %}Modify Request{% endblock %}
+{% block title %}Modify Appointment{% endblock %}
 
 {% block body %}
 	<!-- Load the navbar -->
@@ -9,28 +9,35 @@
 	{% else %}
 	{% include 'includes/_navdashd.html' %}
 	{% endif %}
-
-	<!-- Main content of body -->
+	
 	{% if request.session.logged_in %}
 	<header>
-		<h1>Modify Request</h1>
-		<p>You can only modify the date and time of the request.</p>
+		<h1>Modify Appointment</h1>
+		<p>You can modify the time of the appointment here.</p>
 	</header>
 	<div class="container">
 		<table class="table table-striped" id="table">
 			<tr>
 				<th>Purpose</th>
-				<th>Patient</th>
+				{% if request.session.account_type == 'Patient' %}
+					<th>Doctor</th>
+				{% else %}
+					<th>Patient</th>
+				{% endif %}
 				<th>Date</th>
 				<th>Start Time</th>
 				<th>End Time</th>
 			</tr>
 			<tr>
-				<td>{{modify.purpose}}</td>
-				<td>{{modify.patient}}</td>
-				<td>{{modify.date}}</td>
-				<td>{{modify.starttime|time:"h:i A"}}</td>
-				<td>{{modify.endtime|time:"h:i A"}}</td>
+				<td>{{modify_appointment.purpose}}</td>
+				{% if request.session.account_type == 'Patient' %}
+					<td>{{modify_appointment.doctor}}</td>
+				{% else %}
+					<td>{{modify_appointment.patient}}</td>
+				{% endif %}
+				<td>{{modify_appointment.date}}</td>
+				<td>{{modify_appointment.starttime|time:"h:i A"}}</td>
+				<td>{{modify_appointment.endtime|time:"h:i A"}}</td>
 			</tr>
 		</table>
 	</div>
@@ -38,9 +45,9 @@
 			{% csrf_token %}
 			<div class="modify_request_container">
 				<p id="eventsExample">New time range<br>
-				Time: <input type="text" class="time start" name="timeStart" />
-			    to <input type="text" class="time end" name="timeEnd" />
-			    <button class="btn btn-primary">Confirm Appointment</button>
+				Time: <input type="text" class="time start" name="timeStart" required />
+			    to <input type="text" class="time end" name="timeEnd" required/>
+			    <button class="btn btn-primary" onclick="myFunction(this)">Confirm Appointment</button>
 			</div>
 			<script type="text/javascript">
 				$('#eventsExample .time').timepicker({
@@ -50,7 +57,7 @@
 			        'minTime': '9:00am',
 	  				'maxTime': '6:00pm',
 			        'disableTimeRanges': [
-			        	{% for ea in existingAppointments %}
+			        	{% for ea in existing_appointments %}
 			        		['{{ea.starttime}}', '{{ea.endtime}}'],
 						{% endfor %}
 			        ]
@@ -63,7 +70,6 @@
 				}
 			</script>
 		</form>
-
 	
 	{% else %}
 	<h1>There is no logged in account!<h1>
