--- a/medapp/templates/requests.html
+++ b/medapp/templates/requests.html
@@ -26,7 +26,7 @@
 					<th>Date</th>
 					<th>Start Time</th>
 					<th>End Time</th>
-					<th>Status</th>
+					<th>Actions</th>
 				</tr>
 				{% for r in requests %}
 				<tr>
@@ -35,8 +35,10 @@
 					<td>{{r.date}}</td>
 					<td>{{r.starttime|time:"h:i A"}}</td>
 					<td>{{r.endtime|time:"h:i A"}}</td>
-					<td><a href={{r.id}}><button class="btn btn-primary {{disabled}}" onclick="myFunction(this)">Confirm</button></a>
-							<a href='modify/{{r.id}}'><button class="btn btn-primary" onclick="myFunction(this)">Modify</button></a></td>
+					<td>
+						<a href={{r.id}}><button class="btn btn-primary {{disabled}}" onclick="myFunction(this)">Confirm</button></a>
+						<a href='modify/{{r.id}}'><button class="btn btn-default">Modify</button></a>
+					</td>
 				</tr>
 				{% endfor %}
 			</table>
@@ -44,7 +46,7 @@
 
 		<script type="text/javascript">
 			function myFunction(r){
-				alert('Operation successful');
+				alert('Appointment Confirmed');
 			}
 		</script>
 	{% else %}
