--- a/medapp/templates/register.html
+++ b/medapp/templates/register.html
@@ -27,10 +27,6 @@
 		<input type="text" class="form-control" name="address" aria-describedby="emailHelp" required>
 		</div>
 		<div class="form-group">
-		<label for="exampleInputEmail1">Age</label>
-		<input type="number" class="form-control" name="age" aria-describedby="emailHelp" required>
-		</div>
-		<div class="form-group">
 		<label for="exampleInputEmail1">Gender</label>
 		<select class="form-control" name="gender">
 	      <option>Male</option>
@@ -41,9 +37,11 @@
 		<label for="exampleInputEmail1">Email address</label>
 		<input type="email" class="form-control" name="email" aria-describedby="emailHelp" required>
 		</div>
+		<h3 style="padding-top: 30px">Account Login Credentials</h3>
 		<div class="form-group">
 		<label for="exampleInputEmail1">Username</label>
-		<input type="text" class="form-control" name="username" aria-describedby="emailHelp" required>
+		<input type="text" class="form-control" id="id_username" name="username" aria-describedby="emailHelp" required>
+		<small id="id_username_notify" class="form-text text-muted"></small>
 		</div>
 		<div class="form-group">
 		<label for="exampleInputPassword1">Password</label>
@@ -55,4 +53,26 @@
 		</div>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
+	<script>
+    $("#id_username").change(function () {
+      var username = $(this).val();
+      $.ajax({
+        url: '/ajax/validate_username/',
+        data: {
+          'username': username
+        },
+        dataType: 'json',
+        success: function (data) {
+          if (data.is_taken) {
+            $("#id_username").val("");
+            $("#id_username_notify").text("A user with this username already exists.");
+          }
+          else {
+          	$("#id_username_notify").text("");
+          }
+        }
+      });
+
+    });
+  </script>
 {% endblock %}
