--- a/medapp/templates/index.html
+++ b/medapp/templates/index.html
@@ -13,15 +13,15 @@
   </ol>
   <div class="carousel-inner" role="listbox" style="width: 100%; height: 500px !Important">
     <div class="item active">
-      <img src="{% static 'imgs/edit2.jpg' %}" style="width: 100%; height: 500px !Important" alt="Los Angeles">
+      <img src="{% static 'imgs/edit2.jpg' %}" style="width: 100%; height: 500px !Important">
     </div>
 
     <div class="item">
-      <img src="{% static 'imgs/doctor_hands_edit.jpg' %}" style="width: 100%; height: 500px !Important" alt="Chicago">
+      <img src="{% static 'imgs/doctor_hands_edit.jpg' %}" style="width: 100%; height: 500px !Important">
     </div>
 
     <div class="item">
-      <img src="{% static 'imgs/edit3.jpg' %}" style="width: 100%; height: 500px !Important" alt="New York">
+      <img src="{% static 'imgs/edit3.jpg' %}" style="width: 100%; height: 500px !Important">
     </div>
   </div>
 
@@ -42,20 +42,20 @@
     <p>A web-based appointment system for making appointments and viewing medical history.</p>
   </div>
 </section>
-<section>
-  <div class="boxes">
-    <div class="box1">
-      <img src="{% static 'imgs/cardiology-icon-png-0.png' %}" style="height: 25%; width: 25%; object-fit: contain">
+<section id="boxes">
+  <div class="box_container">
+    <div class="box">
+      <img src="{% static 'imgs/cardiology-icon-png-0.png' %}">
       <h3>Professional Doctors</h3>
       <p>Serving for 7 years, the Doctors are exceptional in their services.</p>
     </div>
-    <div class="box2">
-      <img src="{% static 'imgs/calendar.png' %}" style="height: 25%; width: 25%; object-fit: contain">
+    <div class="box">
+      <img src="{% static 'imgs/calendar.png' %}">
       <h3>Trustworthy and Timely</h3>
       <p>Fast and easy process for making appointments for a better health care.</p>
     </div>
-    <div class="box3">
-      <img src="{% static 'imgs/Mobile-Smartphone-icon.png' %}" style="height: 25%; width: 25%; object-fit: contain">
+    <div class="box">
+      <img src="{% static 'imgs/Mobile-Smartphone-icon.png' %}">
       <h3>Smartphone Supported</h3>
       <p>E-Care will soon be supported by smartphones for easier scheduling and checking of your medical records.</p>
     </div>
