--- a/medapp/static/css/dashboard.css
+++ b/medapp/static/css/dashboard.css
@@ -44,7 +44,7 @@ table { width: 50% }
 .sidebar {
   display: none;
 }
-@media (min-width: 768px) {
+@media (max-width: 992px) {
   .sidebar {
     position: fixed;
     top: 51px;
@@ -85,7 +85,7 @@ table { width: 50% }
 .main {
   padding: 20px;
 }
-@media (min-width: 768px) {
+@media (max-width: 992px) {
   .main {
     padding-right: 40px;
     padding-left: 40px;
