--- a/medapp/templates/layout.html
+++ b/medapp/templates/layout.html
@@ -3,8 +3,8 @@
 <head>
 	
 	<title>{% block title %}{% endblock %}</title>
+	<meta name="viewport" content="width=device-width">
 	{% load static %}
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
