--- a/medapp/templates/account.html
+++ b/medapp/templates/account.html
@@ -27,40 +27,35 @@
               <div class="row">
                 <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="{% static 'imgs/user1.png' %}" style="height: 150px; width: 125px"> </div>
                 <div class=" col-md-9 col-lg-9 " > 
-                  <table class="table table-user-information" >
-                    <tbody>
-                      <tr>
-                        <td>Date of Birth</td>
-                        <td>{{birthday|date:"M. d, Y"}}</td>
-                      </tr>
+                  <div class="table-responsive">
+                    <table class="table table-user-information" >
+                      <tbody>
                         <tr>
-                        <td>Gender</td>
-                        <td>{{gender}}</td>
-                      </tr>
+                          <td>Date of Birth</td>
+                          <td>{{birthday|date:"M. d, Y"}}</td>
+                        </tr>
+                          <tr>
+                          <td>Gender</td>
+                          <td>{{gender}}</td>
+                        </tr>
+                          <tr>
+                          {% if request.session.account_type == 'Patient' %}
+                          <td>Home Address</td>
+                          {% else %}
+                          <td>Clinic Address</td>
+                          {% endif %}
+                          <td>{{address}}</td>
+                        </tr>
                         <tr>
-                        {% if request.session.account_type == 'Patient' %}
-                        <td>Home Address</td>
-                        {% else %}
-                        <td>Clinic Address</td>
-                        {% endif %}
-                        <td>{{address}}</td>
-                      </tr>
-                      <tr>
-                        <td>Email</td>
-                        <td>{{email}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
+                          <td>Email</td>
+                          <td>{{email}}</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
             </div>
-            <!-- <a href="/edit-account"><button class="btn btn-primary" style="float: right;">Edit Account</button></a> -->
-<!--                  <div class="panel-footer">
-                        <a data-original-title="messageadmin" data-toggle="tooltip" type="button" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-envelope"></i><p>Contact us</p></a>
-                        <span class="pull-right">
-                            <a href="edit.html" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-edit"></i><p>Edit your Profile</p></a>
-                        </span>
-                    </div> -->
           </div>
         </div>
       </div>
