--- a/medapp/templates/medical_history.html
+++ b/medapp/templates/medical_history.html
@@ -19,20 +19,22 @@
 		<p>This is where you can see all of the past appointments you have completed.</p>
 	</header>
 	<div class="test">
-	<table class="table table-striped">
-		<tr>
-			<th>Purpose</th>
-			<th>Doctor</th>
-			<th>Date</th>
-		</tr>
-		{% for m in medical_history %}
-		<tr>
-			<td>{{m.diagnosis}}</td>
-			<td>{{m.doctor_name}}</td>
-			<td>{{m.date}}</td>
-		</tr>
-		{% endfor %}
-	</table>
+	<div class="table-responsive">
+		<table class="table table-striped">
+			<tr>
+				<th>Purpose</th>
+				<th>Doctor</th>
+				<th>Date</th>
+			</tr>
+			{% for m in medical_history %}
+			<tr>
+				<td>{{m.diagnosis}}</td>
+				<td>{{m.doctor_name}}</td>
+				<td>{{m.date}}</td>
+			</tr>
+			{% endfor %}
+		</table>
+	</div>
 	</div>
 	{% endif %}
 {% endblock %}
