--- a/medapp/templates/my_schedule.html
+++ b/medapp/templates/my_schedule.html
@@ -57,29 +57,31 @@
 		<h1>Appointment Summary</h1>
 		<p>Your appointment summary are displayed here for more details.</p>
 	</header>
-	<table class="table table-striped">
-		<tr>
-			<th>Purpose</th>
-			<th>Doctor</th>
-			<th>Date</th>
-			<th>Start Time</th>
-			<th>End Time</th>
-			<th>Actions</th>
-		</tr>
-		{% for a in user_appointment %}
-		<tr>
-			<td>{{a.purpose}}</td>
-			<td>{{a.doctor}}</td>
-			<td>{{a.date}}</td>
-			<td>{{a.starttime|time:"h:i A"}}</td>
-			<td>{{a.endtime|time:"h:i A"}}</td>
-			<td>
-				<a href="modify/{{a.id}}" class="confirm_modify"><button class="btn btn-default">Modify</button></a>
-				<a href="{{a.id}}" class="confirm_delete"><button class="btn btn-danger">Cancel</button></a>
-			</td>
-		</tr>
-		{% endfor %}
-	</table>
+	<div class="table-responsive">
+		<table class="table table-striped">
+			<tr>
+				<th>Purpose</th>
+				<th>Doctor</th>
+				<th>Date</th>
+				<th>Start Time</th>
+				<th>End Time</th>
+				<th>Actions</th>
+			</tr>
+			{% for a in user_appointment %}
+			<tr>
+				<td>{{a.purpose}}</td>
+				<td>{{a.doctor}}</td>
+				<td>{{a.date}}</td>
+				<td>{{a.starttime|time:"h:i A"}}</td>
+				<td>{{a.endtime|time:"h:i A"}}</td>
+				<td>
+					<a href="modify/{{a.id}}" class="confirm_modify"><button class="btn btn-default">Modify</button></a>
+					<a href="{{a.id}}" class="confirm_delete"><button class="btn btn-danger">Cancel</button></a>
+				</td>
+			</tr>
+			{% endfor %}
+		</table>
+	</div>
 	</div>
 	{% endif %}
 		<script>
