--- a/medapp/templates/index.html
+++ b/medapp/templates/index.html
@@ -11,21 +11,17 @@
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
   </ol>
-  <div class="carousel-inner" role="listbox" style="width: 100%; height: 500px !Important">
+  <div class="carousel-inner" role="listbox" style="width: 100%; height: auto !Important">
     <div class="item active">
-      <img src="{% static 'imgs/edit2.jpg' %}" style="width: 100%; height: 500px !Important">
+      <img src="{% static 'imgs/edit2.jpg' %}" style="width: 100%; height: auto !Important">
     </div>
-
     <div class="item">
-      <img src="{% static 'imgs/doctor_hands_edit.jpg' %}" style="width: 100%; height: 500px !Important">
+      <img src="{% static 'imgs/doctor_hands_edit.jpg' %}" style="width: 100%; height: auto !Important">
     </div>
-
     <div class="item">
-      <img src="{% static 'imgs/edit3.jpg' %}" style="width: 100%; height: 500px !Important">
+      <img src="{% static 'imgs/edit3.jpg' %}" style="width: 100%; height: auto !Important">
     </div>
   </div>
-
-
   <a class="left carousel-control" href="#myCarousel" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
     <span class="sr-only">Previous</span>
