--- a/medapp/templates/layout.html
+++ b/medapp/templates/layout.html
@@ -5,6 +5,7 @@
 	<title>{% block title %}{% endblock %}</title>
 	<meta name="viewport" content="width=device-width">
 	{% load static %}
+	<link rel="icon" href="{% static 'imgs/icon.png' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
