--- a/medapp/templates/account.html
+++ b/medapp/templates/account.html
@@ -38,6 +38,10 @@
                           <td>Gender</td>
                           <td>{{gender}}</td>
                         </tr>
+                        <tr>
+                          <td>Age</td>
+                          <td>{{age}}</td>
+                        </tr>
                           <tr>
                           {% if request.session.account_type == 'Patient' %}
                           <td>Home Address</td>
