Changed index content

--- a/medapp/templates/index.html
+++ b/medapp/templates/index.html
@@ -52,8 +52,8 @@
     </div>
     <div class="box">
       <img src="{% static 'imgs/Mobile-Smartphone-icon.png' %}">
-      <h3>Smartphone Supported</h3>
-      <p>E-Care will soon be supported by smartphones for easier scheduling and checking of your medical records.</p>
+      <h3>Smartphone Compatible</h3>
+      <p>E-Care is now supported by smartphones for easier browsing of your schedule and medical records.</p>
     </div>
   </div>
 </section>
