--- a/medapp/templates/register.html
+++ b/medapp/templates/register.html
@@ -20,7 +20,7 @@
 		</div>
 		<div class="form-group">
 		<label for="exampleInputEmail1">Birthday</label>
-		<input type="date" class="form-control" name="birthday" aria-describedby="emailHelp" max="2017-10-04" required>
+		<input type="date" class="form-control" name="birthday" id="ui_datepicker" aria-describedby="emailHelp" max="2017-10-04" required>
 		</div>
 		<div class="form-group">
 		<label for="exampleInputEmail1">Address</label>
@@ -72,7 +72,5 @@
           }
         }
       });
-
-    });
   </script>
 {% endblock %}
